// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`easter 1`] = `
Day {
  "celebration": [
    Observance {
      "colors": [
        "w",
      ],
      "date": "2024-03-31",
      "flexibility": "tempora",
      "id": "tempora:Pasc0-0:1:w",
      "link": "missal/pascoa/Pasc0-0",
      "name": "Pasc0-0",
      "priority": 3,
      "rank": 1,
      "title": "Domingo da Ressurreição",
      "weekday": 0,
    },
  ],
  "commemoration": [],
  "date": "2024-03-31",
  "tempora": [
    Observance {
      "colors": [
        "w",
      ],
      "date": "2024-03-31",
      "flexibility": "tempora",
      "id": "tempora:Pasc0-0:1:w",
      "link": "missal/pascoa/Pasc0-0",
      "name": "Pasc0-0",
      "priority": 3,
      "rank": 1,
      "title": "Domingo da Ressurreição",
      "weekday": 0,
    },
  ],
}
`;

exports[`sabado santo 1`] = `
Day {
  "celebration": [
    Observance {
      "colors": [
        "v",
        "w",
      ],
      "date": "2024-03-30",
      "flexibility": "tempora",
      "id": "tempora:Quad6-6:1:vw",
      "link": "missal/quaresma/Quad6-6",
      "name": "Quad6-6",
      "priority": 7,
      "rank": 1,
      "title": "Sábado Santo",
      "weekday": 6,
    },
  ],
  "commemoration": [],
  "date": "2024-03-30",
  "tempora": [
    Observance {
      "colors": [
        "v",
        "w",
      ],
      "date": "2024-03-30",
      "flexibility": "tempora",
      "id": "tempora:Quad6-6:1:vw",
      "link": "missal/quaresma/Quad6-6",
      "name": "Quad6-6",
      "priority": 7,
      "rank": 1,
      "title": "Sábado Santo",
      "weekday": 6,
    },
  ],
}
`;

exports[`segunda pascal 1`] = `
Day {
  "celebration": [
    Observance {
      "colors": [
        "w",
      ],
      "date": "2024-04-01",
      "flexibility": "tempora",
      "id": "tempora:Pasc0-1:1:w",
      "link": "missal/pascoa/Pasc0-1",
      "name": "Pasc0-1",
      "priority": 29,
      "rank": 1,
      "title": "Segunda-feira Pascal",
      "weekday": 1,
    },
  ],
  "commemoration": [],
  "date": "2024-04-01",
  "tempora": [
    Observance {
      "colors": [
        "w",
      ],
      "date": "2024-04-01",
      "flexibility": "tempora",
      "id": "tempora:Pasc0-1:1:w",
      "link": "missal/pascoa/Pasc0-1",
      "name": "Pasc0-1",
      "priority": 29,
      "rank": 1,
      "title": "Segunda-feira Pascal",
      "weekday": 1,
    },
  ],
}
`;
